# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventzAPI"
version = "2.2.6"
description = "The Events API supports a Python micro-services infrastructure using RabbitMQ, Event Sourcing & Tuple Space"
readme = "README.md"
authors = [{ name = "I-Technology Inc.", email ="bobj@i-technologyinc.com" }]
license = { file = "LICENSE" }
classifiers = [
        "Programming Language :: Python :: 3.12",
        "Natural Language :: English",
        "Topic :: System :: Distributed Computing",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
        "Operating System :: OS Independent",
]
keywords = ["microservice", "API", "events"]
dependencies = [
        'PyQt6',
        'tomli; python_version < "3.11"',
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://www.eventzapi.com/"
Repository = "https://github.com/i-Technology/eventzAPI.git"

[project.scripts]
realpython = "reader.__main__:main"